--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
         "@fontsource/roboto": "^5.0.13",
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
-        "@mui/x-charts": "^7.4.0",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.8",
         "class-validator": "^0.14.1",
         "framer-motion": "^11.1.7",
+        "jwt-decode": "^4.0.0",
         "postcss": "^8.4.38",
         "primereact": "^10.6.5",
         "react": "^18.2.0",
@@ -31,7 +31,8 @@
         "react-intersection-observer": "^9.10.2",
         "react-router-dom": "^7.2.0",
         "react-select": "^5.10.1",
-        "tailwindcss": "^3.4.3"
+        "tailwindcss": "^3.4.3",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
