--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
     "paths": {
       "@/*": ["src/*"],
       "@test/*": ["test/*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "typeRoots": ["./node_modules/@types", "./src"],
   "include": [
