--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fontsource/roboto": "^5.0.13",
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
+        "@simplewebauthn/browser": "^13.1.0",
         "@vitejs/plugin-react": "^4.4.1",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.8",
