--- a/package.json
+++ b/package.json
@@ -1,50 +1,57 @@
 {
-    "name": "frontend",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@dnd-kit/core": "^6.3.1",
-        "@dnd-kit/sortable": "^10.0.0",
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
-        "@fontsource/roboto": "^5.0.13",
-        "@mui/icons-material": "^5.15.15",
-        "@mui/material": "^5.15.15",
-        "@simplewebauthn/browser": "^13.1.0",
-        "@vitejs/plugin-react": "^4.4.1",
-        "autoprefixer": "^10.4.19",
-        "axios": "^1.6.8",
-        "class-validator": "^0.14.1",
-        "framer-motion": "^11.1.7",
-        "jwt-decode": "^4.0.0",
-        "postcss": "^8.4.38",
-        "primereact": "^10.6.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hot-toast": "^2.4.1",
-        "react-icons": "^5.1.0",
-        "react-intersection-observer": "^9.10.2",
-        "react-router-dom": "^7.2.0",
-        "react-select": "^5.10.1",
-        "tailwindcss": "^3.4.3",
-        "zustand": "^5.0.3"
-    },
-    "devDependencies": {
-        "@types/node": "^22.14.1",
-        "@types/react": "^18.3.20",
-        "@types/react-dom": "^18.3.6",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react": "^7.34.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.6",
-        "typescript": "^5.8.3",
-        "vite": "^5.2.0"
-    }
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@simplewebauthn/browser": "^13.1.0",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
+    "class-validator": "^0.14.1",
+    "framer-motion": "^11.1.7",
+    "idb": "^8.0.3",
+    "jwt-decode": "^4.0.0",
+    "postcss": "^8.4.38",
+    "primereact": "^10.6.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.1",
+    "tailwindcss": "^3.4.3",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "vite": "^5.2.0"
+  }
 }
